@@ -1,3 +1,6 @@
+* Thu Nov 01 2018 Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.3.0-0
+- static asset updates for puppet 5
+
 * Mon Oct 01 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.3.0-0
 - Added OEL and Puppet 5 support
 - Add some previously impossible to configure options
